updated britney spears jukebox page

--- a/artists/britney-spears.html
+++ b/artists/britney-spears.html
@@ -96,7 +96,7 @@
 
     <section class="artist-lore">
       <p>
-        Your personal lore about this artist goes here.
+        It doesn't take a lot of hot nights and candy lotion to get into the adult Britney. Oh, how I loved her from the get-go. My appreciation for her work today compares drastically to the level of adoration when I was a teenager. For me now, as a person with a few mental health issues going on upstairs, my respect is best expressed through the threads she and I share in the mental health sphere. Yes, I was bullied heavily in school for being a Britney Spears fan. But, it's also through her early works that I found the courage to keep going and fighting for my right to breathe and exist just like every other motherfucker who slammed me against the walls, knocked in bathroom stalls where I'd hide to eat my lunch in "peace" and the kids who couldn't see that I was actually a major spiritual force to be reckoned with. In essence, Britney gave me the courage to roar and she's the reason I survived high school.
       </p>
     </section>
 <br>
