updated messages and blog post

--- a/ledger.html
+++ b/ledger.html
@@ -26,6 +26,13 @@
         </header>
 
         <div class="blog-grid">
+
+             <article class="blog-card">
+                <div class="blog-date">Dec 19, 2025</div>
+                <h3>The Day I Realized I'm Patient, Not a Doormat</h3>
+                <p class="blog-summary">But here’s the part that surprised me: therapy didn’t make me angrier. It didn’t feed the bitterness. It actually cracked something open in my chest in a way I wasn’t expecting.</p>
+                <a href="blog/patience-12-19-25.html" class="read-more">READ ENTRY <i class="fa-solid fa-chevron-right"></i></a>
+            </article>
             
             <article class="blog-card">
                 <div class="blog-date">Dec 16, 2025</div>
