--- a/mainframe.html
+++ b/mainframe.html
@@ -53,7 +53,7 @@
         <p class="role">System Oracle</p>
         <div class="status-container">
             <span class="ivy-eye-glow-dot"></span>
-            <p class="status-blink">STATUS: Nap 3 minutes. Bird-watch for 10. Rinse, repeat.</p>
+            <p class="status-blink">STATUS: Munching that kibble!</p>
         </div>
     </div>
 </div>
@@ -72,8 +72,8 @@
         </div>
         <div class="status-row">
             <i class="fa-solid fa-temperature-half"></i>
-            <span>Current Operating Conditions: Dismayed</span><br>
-            <span><h3> Where the hell is my tailbone? Has anyone seen it?</h3></span>
+            <span>Current Operating Conditions: Tired but functional</span><br>
+            <span><h3>I have nothing funny to jab at during this liminal hour of 3 am.</h3></span>
         </div>
     </div>
 </div>
