updated statuses and PR newswire for 12-19-25

--- a/ledger.html
+++ b/ledger.html
@@ -72,6 +72,11 @@
             
             <div class="pr-list-scroll">
                 
+                <a href="assets/pr/PR121925.pdf" class="pr-link">
+                    <span class="pr-date">DEC 15 2025</span>
+                    <span class="pr-title">The Orange Anus Won't Get His Way</span>
+                    <i class="fa-solid fa-file-pdf"></i>
+                </a>  
                 <a href="assets/pr/PR121525.pdf" class="pr-link">
                     <span class="pr-date">DEC 15 2025</span>
                     <span class="pr-title">When Brand Strategies Epic Fail</span>
