New blog update. Changed statuses.

--- a/ledger.html
+++ b/ledger.html
@@ -27,6 +27,13 @@
 
         <div class="blog-grid">
 
+            <article class="blog-card">
+                <div class="blog-date">Dec 20, 2025</div>
+                <h3>The Taxi Tempest</h3>
+                <p class="blog-summary">I’ve been contending with a class of morons in my age bracket or younger for so long that I’ve developed confirmation bias like it’s the fucking flu.</p>
+                <a href="/blog/2025/DEC/12-20-25-the-taxi-tempest.html" class="read-more">READ ENTRY <i class="fa-solid fa-chevron-right"></i></a>
+            </article>
+
              <article class="blog-card">
                 <div class="blog-date">Dec 19, 2025</div>
                 <h3>The Day I Realized I'm Patient, Not a Doormat</h3>
