Added more artists to Jacks Jukebox

--- a/jukebox.html
+++ b/jukebox.html
@@ -176,12 +176,16 @@
 <!-- C SECTION -->
 <div class="divider-pink"></div>
 <h2 id="C" class="gold-pulse">C</h2>
-<div class="jukebox-section"></div>
+<div class="jukebox-section">
+    <a href="/artists/brandi-carlile.html" class="artist-link">Brandi Carlile</a>
+</div>
 
 <!-- D SECTION -->
 <div class="divider-green"></div>
 <h2 id="D" class="gold-pulse">D</h2>
-<div class="jukebox-section"></div>
+<div class="jukebox-section">
+    <a href="/artists/trent-dabbs.html" class="artist-link">Trent Dabbs</a>
+</div>
 
 <!-- E SECTION -->
 <div class="divider-pink"></div>
@@ -242,6 +246,8 @@
 <h2 id="M" class="gold-pulse">M</h2>
 <div class="jukebox-section">
   <a href="/artists/maroon-5.html" class="artist-link">Maroon 5</a>
+  <a href="/artists/ingrid-michaelson.html" class="artist-link">Ingrid Michaelson</a>
+  <a href="/artists/jason-mraz.html" class="artist-link">Jason Mraz</a></div>
 </div>
 
 <!-- N SECTION -->
