added a new icon for jukebox and indicated such on jukebox page

--- a/jukebox.html
+++ b/jukebox.html
@@ -177,14 +177,14 @@
 <div class="divider-pink"></div>
 <h2 id="C" class="gold-pulse">C</h2>
 <div class="jukebox-section">
-    <a href="/artists/brandi-carlile.html" class="artist-link">Brandi Carlile</a>
+    <a href="/artists/brandi-carlile.html" class="artist-link">Brandi Carlile <span class="artist-new icon" aria-hidden="true">NEW</span></a>
 </div>
 
 <!-- D SECTION -->
 <div class="divider-green"></div>
 <h2 id="D" class="gold-pulse">D</h2>
 <div class="jukebox-section">
-    <a href="/artists/trent-dabbs.html" class="artist-link">Trent Dabbs</a>
+    <a href="/artists/trent-dabbs.html" class="artist-link">Trent Dabbs <span class="artist-new icon" aria-hidden="true">NEW</span></a>
 </div>
 
 <!-- E SECTION -->
@@ -246,8 +246,9 @@
 <h2 id="M" class="gold-pulse">M</h2>
 <div class="jukebox-section">
   <a href="/artists/maroon-5.html" class="artist-link">Maroon 5</a>
-  <a href="/artists/ingrid-michaelson.html" class="artist-link">Ingrid Michaelson</a>
-  <a href="/artists/jason-mraz.html" class="artist-link">Jason Mraz</a></div>
+  <a href="/artists/ingrid-michaelson.html" class="artist-link">
+  Ingrid Michaelson <span class="artist-new icon" aria-hidden="true">NEW</span></a>
+  <a href="/artists/jason-mraz.html" class="artist-link">Jason Mraz <span class="artist-new icon" aria-hidden="true">NEW</span></a>
 </div>
 
 <!-- N SECTION -->
