Added more glossary terms and linked to the main-vault page

--- a/main-vault.html
+++ b/main-vault.html
@@ -19,7 +19,7 @@
     <div class="bento-grid">
     
      <!-- Harperville™ Glossary -->
-      <a href="#" class="card">
+      <a href="/hv-glossary.html" class="card">
         <div class="card-content">
           <i class="fa-solid fa-globe icon-large"></i>
           <h3>Harperville™ Glossary</h3>
