updated link on Vault page to Amazon Author page

--- a/main-vault.html
+++ b/main-vault.html
@@ -28,13 +28,17 @@
       </a>
       
       <!-- Jack's Books -->
-      <a href="#" class="card">
-        <div class="card-content">
-          <i class="fa-solid fa-book icon-large"></i>
-          <h3>Jack's Books</h3>
-          <p>They USED to be an Award-winning Gay Romance Author.</p>
-        </div>
-      </a>
+      <a href="https://www.amazon.com/dp/B0G9YVQFBH?"
+   class="card"
+   target="_blank"
+   rel="noopener noreferrer">
+  <div class="card-content">
+    <i class="fa-solid fa-book icon-large"></i>
+    <h3>Jack's Books</h3>
+    <p>They USED to be an Award-winning Gay Romance Author. Care to take a literal literary roller-coaster ride?</p>
+  </div>
+</a>
+
 
       <!-- Herstory -->
       <a href="#" class="card">
