edited sitemap upload and robots txt

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   "gender": "Nonbinary",
   "url": "https://harperville.me",
   "description": "Nonbinary author of MM romance and LGBTQ+ fiction, The Ozian Ambassador for The Emerald City, and curator of Harperville™ — a mythic digital sanctuary of creative archives, playlists, satire, and emotional weather.",
-  "jobTitle": "Author, Creative Mythmaker",
+  "jobTitle": "Author",
   "knowsAbout": [
     "MM Romance",
     "LGBTQ+ Fiction",
