updated statuses, posted new blog entry, updated ledger linkage

--- a/ledger.html
+++ b/ledger.html
@@ -28,6 +28,13 @@
         <div class="blog-grid">
 
             <article class="blog-card">
+                <div class="blog-date">Dec 22, 2025</div>
+                <h3>Old Phone, Quiet Grief</h3>
+                <p class="blog-summary">If there is one song that can summarize a lifetime of pain, displacement, and scrutiny, it’s this one.</p>
+                <a href="/blog/2025/DEC/12-22-25-old-phone-music-therapy.html" class="read-more">READ ENTRY <i class="fa-solid fa-chevron-right"></i></a>
+            </article>
+
+            <article class="blog-card">
                 <div class="blog-date">Dec 20, 2025</div>
                 <h3>The Taxi Tempest</h3>
                 <p class="blog-summary">I’ve been contending with a class of morons in my age bracket or younger for so long that I’ve developed confirmation bias like it’s the fucking flu.</p>
