added celine dion to jukebox

--- a/jukebox.html
+++ b/jukebox.html
@@ -185,6 +185,7 @@
 <h2 id="D" class="gold-pulse">D</h2>
 <div class="jukebox-section">
     <a href="/artists/trent-dabbs.html" class="artist-link">Trent Dabbs <span class="artist-new icon" aria-hidden="true">NEW</span></a>
+    <a href="/artists/celine-dion.html" class="artist-link">Celine Dion <span class="artist-new icon" aria-hidden="true">GODDESS!</span></a>
 </div>
 
 <!-- E SECTION -->
