updated statuses on mainframe, uploaded new blog entry for ivy in ivy-coded css, added ivy-code in main css, updated glossary, linked blog to ledger

--- a/hv-glossary.html
+++ b/hv-glossary.html
@@ -242,6 +242,13 @@ A living, unofficial, emotionally accurate dictionary of Harperville™ language
     </div>
 
     <div class="glossary-term"
+      data-term="certified familiar"
+      data-definition="(noun) A non‑human companion formally recognized as emotionally essential, narratively authoritative, and legally entitled to intervene in human affairs."
+      data-example="Ivy Willow serves as Jack's certified familiar, authorized to supervise rituals and issue 3 a.m. interventions if need be.">
+      certified familiar
+    </div>
+
+    <div class="glossary-term"
       data-term="clockle"
       data-definition="(noun) A small, unbearable unit of time awareness."
       data-example="Before Jack could speak their truth, a silent clockle fleeted on by.">
@@ -270,6 +277,13 @@ A living, unofficial, emotionally accurate dictionary of Harperville™ language
     </div>
 
     <div class="glossary-term"
+      data-term="Cosmic Accountability Clause"
+      data-definition="(proper noun) The moment when a person stops pleading with fate and instead demands reciprocal effort from the universe."
+      data-example="Invoking the Cosmic Accountability Clause shifted the emotional weather overnight.">
+      Cosmic Accountability Clause
+    </div>
+
+    <div class="glossary-term"
       data-term="cosmic receipt printer"
       data-definition="(noun) A metaphor for fate delivering outcomes with bureaucratic finality."
       data-example="The universe whirred like a cosmic receipt printer and handed Jack Aspen Harper some tangible closure.">
@@ -289,6 +303,13 @@ A living, unofficial, emotionally accurate dictionary of Harperville™ language
       data-definition="(adjective) Intentionally slow and thoughtful."
       data-example="The Wizard's response seemed deliberary, not only delayed.">
       deliberary
+    </div>
+
+    <div class="glossary-term"
+      data-term="doppio"
+      data-definition="(noun) A double shot of Italian espresso, made with twice the ground coffee and water of a single shot."
+      data-example="Jack pulls a doppio x3 most mornings.">
+      doppio
     </div>
 
     <div class="glossary-term"
@@ -348,6 +369,13 @@ A living, unofficial, emotionally accurate dictionary of Harperville™ language
       emotional weather
     </div>
 
+    <div class="glossary-term"
+      data-term="extended plot compression"
+      data-definition="(noun) A period when too many events occur too quickly, leaving little time to process."
+      data-example="It's been declared that 2025 serve as Jack Aspen Harper's extended plot progression arc.">
+      extended plot compression
+    </div>
+
   </div>
 </div>
 
@@ -361,6 +389,27 @@ A living, unofficial, emotionally accurate dictionary of Harperville™ language
       data-definition="(noun) Comfort that's derived from recognition."
       data-example="Jack identified the familiarance in that Taylor Swift song.">
       familiarance
+    </div>
+
+    <div class="glossary-term"
+      data-term="familiar oversight protocol"
+      data-definition="(noun) The unspoken agreement that a familiar must supervise from elevated surfaces during moments of human distress."
+      data-example="Familiar oversight protocol required Ivy to monitor events from the bookshelf.">
+      familiar oversight protocol
+    </div>
+
+    <div class="glossary-term"
+      data-term="feline emergency powers"
+      data-definition="(noun) The inherent authority of a cat to intervene during moments of human instability."
+      data-example="Under feline emergency powers, Ivy helped Oopie initiated a 3 a.m. Cosmic Accountability Clause.">
+      feline emergency powers
+    </div>
+
+    <div class="glossary-term"
+      data-term="financial breadcrumbs"
+      data-definition="(noun) Small but meaningful monetary signs that suggest survival is still possible."
+      data-example="The referral bonus appeared as Financial Breadcrumbs just when they were needed.">
+      financial breadcrumbs
     </div>
 
     <div class="glossary-term"
@@ -428,6 +477,13 @@ A living, unofficial, emotionally accurate dictionary of Harperville™ language
       Harperville™
     </div>
 
+    <div class="glossary-term"
+      data-term="Harperville™ Oracle"
+      data-definition="(proper noun) A being—often feline—who perceives emotional weather, narrative shifts, and cosmic timing before humans do."
+      data-example="From her perch atop the office cat tree, the Harperville™ Oracle observed Jack's plot turning for the better.">
+      Harperville™ Oracle
+    </div>
+
   </div>
 </div>
 
@@ -448,6 +504,13 @@ A living, unofficial, emotionally accurate dictionary of Harperville™ language
       data-definition="(adjective) Purposeful, yet flexible."
       data-example="Jack grew angry at their spine doctor's lack of intentionalish planning because December temperatures aren't opportune for his primary patient demographic.">
       intentionalish
+    </div>
+
+     <div class="glossary-term"
+      data-term="internal orchestra event"
+      data-definition="(noun) A mental state in which thoughts, worries, and ideas all play at once, often without a conductor."
+      data-example="The room was silent, but Jack’s mind was hosting a full internal orchestra event.">
+      internal orchestra event
     </div>
 
   </div>
@@ -532,6 +595,13 @@ A living, unofficial, emotionally accurate dictionary of Harperville™ language
     </div>
 
     <div class="glossary-term"
+      data-term="liminal hour"
+      data-definition="(noun) The threshold time—often around 3 a.m.—when emotional truths surface and narrative decisions are made."
+      data-example="At the liminal hour, I issued a formal notice to the universe.">
+      liminal hour
+    </div>
+
+    <div class="glossary-term"
       data-term="lingerozance"
       data-definition="(noun) Heavy, emotional residue after an event of great significance."
       data-example="The lingerozance of Jack's fellow Ozians felt electrified after they dropped their emerald-crusted gavel.">
@@ -598,6 +668,20 @@ A living, unofficial, emotionally accurate dictionary of Harperville™ language
   <div class="glossary-grid">
 
     <div class="glossary-term"
+      data-term="oat ritual"
+      data-definition="(noun) A grounding morning practice involving warm food, silence, and nervous system repair."
+      data-example="Jack's oat ritual marks the start of a calmer day.">
+      oat ritual
+    </div>
+
+    <div class="glossary-term"
+      data-term="Oopie"
+      data-definition="(proper noun) A nonbinary, affectionate term used by a familiar to refer to their human caretaker; denotes emotional authority, ritual responsibility, and mutual devotion without invoking gendered parental language. Oopie implies a relationship built on care, routine, and shared domestic mythmaking rather than hierarchy or ownership."
+      data-example="Oopie likes to wait until the last possible minute to feed me, which is a clear violation of Temporal Kibble Law.">
+      Oopie
+    </div>
+
+    <div class="glossary-term"
       data-term="overclarifuddled"
       data-definition="(adverb) To become immensely overwhelmed by too many details."
       data-example="I always seem to make my protagonists feel overclarifuddled with a litany of sensory input.">
@@ -640,6 +724,13 @@ A living, unofficial, emotionally accurate dictionary of Harperville™ language
       performative ending
     </div>
 
+     <div class="glossary-term"
+      data-term="professional listener"
+      data-definition="(noun) A trained human who assists with emotional maintenance and narrative continuity. Jack refers to them as 'Holly' and 'Megan' amidst Harperville™ and its borders."
+      data-example="The post ended with a performative ending, cursor blinking in defiance as Jack shot back another hit of Italian espresso.">
+      professional listener
+    </div>
+
     <div class="glossary-term"
       data-term="purposiquilly"
       data-definition="(adverb) Exercising actionable intent regardless of any recourse."
@@ -672,7 +763,7 @@ A living, unofficial, emotionally accurate dictionary of Harperville™ language
     <div class="glossary-term"
       data-term="quorumancy"
       data-definition="(noun) The magic of knowing when enough is damn well enough. See also: Overdone and Dry, thwarted."
-      data-example="Neverthelostish, Jack expressed gratitution after opening the ruby heels sent to Harperville™ from RuPaul in West Hollywood.">
+      data-example="It's an innate power to behold the gift of quorumancy.">
       quorumancy
     </div>
 
@@ -728,6 +819,13 @@ A living, unofficial, emotionally accurate dictionary of Harperville™ language
 <h2 id="T" class="gold-pulse">T</h2>
 <div class="glossary-section">
   <div class="glossary-grid">
+
+    <div class="glossary-term"
+      data-term="Temporal Kibble Law"
+      data-definition="(noun) The immutable rule governing feeding schedules, understood instinctively by pets and enforced without mercy."
+      data-example="Temporal Kibble Law was violated by three minutes, prompting immediate feline review.">
+      Temporal Kibble Law
+    </div>
 
     <div class="glossary-term"
       data-term="trabonked"
