uploaded possibilities corkboard, page, and assets. need to test page for functionality.

--- a/possibilities-jack-aspen-harper.html
+++ b/possibilities-jack-aspen-harper.html
@@ -66,9 +66,9 @@
   <!-- Hero corkboard image -->
   <img src="/assets/images/possibilities-corkboard.png"
        alt="Possibilities Board"
-       class="bio-image">
+       class="possibilities-hero">
 
-  <h1 class="bio-title">Possibilities</h1>
+  <h1 class="bio-title">POSSIBILITIES</h1>
   <p class="bio-text">
     A living vision board inspired by hope, intention, and the belief that
     the future is not fixed — it is curated.
@@ -82,13 +82,15 @@
   <div class="possibilities-panel">
     <img src="/assets/images/future-me.png"
          alt="Future Jack"
-         class="bio-image">
+         class="possibility-image">
 
     <p class="bio-text">
       This is how I envision myself two years from now — grounded, creatively
       fulfilled, emotionally unflutterable, and living inside a life that
-      finally fits.
-    </p>
+      finally fits. New York City? Beverly Hills? Portland? Honestly, I could see
+      myself just about anywhere—EXCEPT Western Colorado. 
+      </p>
+    <span class="gold-pulse">THIS PLACE IS NOT GOING TO BE THE DEATH OF ME!</span>
   </div>
 
   <!-- Dropdown: My Future Daddy -->
@@ -99,11 +101,20 @@
   <div class="possibilities-panel">
     <img src="/assets/images/future-daddy.png"
          alt="Marcello W."
-         class="bio-image">
+         class="possibility-image">
 
     <p class="bio-text">
       Marcello W. — Italian, emotionally literate, impeccably dressed, and
       fully capable of handling Harperville energy without flinching.
+      My future Daddy does NOT have to be Italian. Nor come from wealth.
+      He will, and absolutely MUST be:
+      Trauma Informed
+      Emotionally Mature
+      Patient
+      A breadth of mental health understanding and acceptance.
+      His name doesn't have to be Marcello. Somehow, my intuition tells me 
+      that will be their name, or at least their first name will start with
+      an 'M' and their last name a 'W'...
     </p>
   </div>
 
@@ -115,11 +126,14 @@
   <div class="possibilities-panel">
     <img src="/assets/images/us-together.png"
          alt="Jack and Marcello"
-         class="bio-image">
+         class="possibility-image">
 
     <p class="bio-text">
       A shared future built on intention, humor, mutual admiration, and the
-      quiet confidence of choosing each other on purpose.
+      quiet confidence of choosing each other on purpose. This is the loving
+      companionship I envision. We can travel, sure. But I'd be just as 
+      smitten by staying in most nights, curled up with our hands intertwined,
+      watching television or a movie. Possibilities, Possibilities, Possibilities!
     </p>
   </div>
 
