fixed accordian formatting?

--- a/possibilities-jack-aspen-harper.html
+++ b/possibilities-jack-aspen-harper.html
@@ -74,10 +74,9 @@
     the future is not fixed — it is curated.
   </p>
 
-  <!-- Dropdown: Future Me -->
-  <button class="hv-modal-trigger possibilities-toggle">
-    Future Me
-  </button>
+<!-- Dropdown: Future Me -->
+<details class="possibility">
+  <summary class="gold-pulse">FUTURE ME</summary>
 
   <div class="possibilities-panel">
     <img src="/assets/images/future-me.png"
@@ -88,15 +87,17 @@
       This is how I envision myself two years from now — grounded, creatively
       fulfilled, emotionally unflutterable, and living inside a life that
       finally fits. New York City? Beverly Hills? Portland? Honestly, I could see
-      myself just about anywhere—EXCEPT Western Colorado. 
-      </p>
+      myself just about anywhere—EXCEPT Western Colorado.
+    </p>
+
     <span class="gold-pulse">THIS PLACE IS NOT GOING TO BE THE DEATH OF ME!</span>
   </div>
 
-  <!-- Dropdown: My Future Daddy -->
-  <button class="hv-modal-trigger possibilities-toggle">
-    My Future Daddy
-  </button>
+</details>
+
+ <!-- My Future Daddy -->
+<details class="possibility">
+  <summary class="gold-pulse">MY FUTURE DADDY</summary>
 
   <div class="possibilities-panel">
     <img src="/assets/images/future-daddy.png"
@@ -118,10 +119,11 @@
     </p>
   </div>
 
-  <!-- Dropdown: Us -->
-  <button class="hv-modal-trigger possibilities-toggle">
-    Us
-  </button>
+</details>
+
+<!-- Us -->
+<details class="possibility">
+  <summary class="gold-pulse">US + LOVE = FOREVER</summary>
 
   <div class="possibilities-panel">
     <img src="/assets/images/us-together.png"
@@ -136,6 +138,9 @@
       watching television or a movie. Possibilities, Possibilities, Possibilities!
     </p>
   </div>
+
+</details>
+
 
 </section>
 
