updated possibilities text styling

--- a/possibilities-jack-aspen-harper.html
+++ b/possibilities-jack-aspen-harper.html
@@ -68,13 +68,13 @@
        alt="Possibilities Board"
        class="possibilities-hero">
 
-  <h1 class="bio-title">POSSIBILITIES</h1>
+  <h1 class="gold-pulse">POSSIBILITIES</h1>
   <p class="bio-text">
-    A living vision board inspired by hope, intention, and the belief that
-    the future is not fixed — it is curated.
+    <strong>A living vision board inspired by hope, intention, and the belief that
+    the future is not fixed — it is curated.</strong>
   </p>
 
-<!-- Dropdown: Future Me -->
+<!-- Future Me -->
 <details class="possibility">
   <summary class="gold-pulse">FUTURE ME</summary>
 
@@ -83,63 +83,71 @@
          alt="Future Jack"
          class="possibility-image">
 
-    <p class="bio-text">
-      This is how I envision myself two years from now — grounded, creatively
-      fulfilled, emotionally unflutterable, and living inside a life that
-      finally fits. New York City? Beverly Hills? Portland? Honestly, I could see
-      myself just about anywhere—EXCEPT Western Colorado.
-    </p>
+    <div class="hv-happy-ending">
+      <p class="bio-text">
+        This is how I envision myself two years from now — grounded, creatively
+        fulfilled, emotionally unflutterable, and living inside a life that
+        finally fits. New York City? Beverly Hills? Portland? Honestly, I could see
+        myself just about anywhere—EXCEPT Western Colorado.
+      </p>
+    </div>
 
     <span class="gold-pulse">THIS PLACE IS NOT GOING TO BE THE DEATH OF ME!</span>
   </div>
 
 </details>
 
- <!-- My Future Daddy -->
+<!-- My Future Daddy -->
 <details class="possibility">
   <summary class="gold-pulse">MY FUTURE DADDY</summary>
 
   <div class="possibilities-panel">
     <img src="/assets/images/future-daddy.png"
-         alt="Marcello W."
+         alt="Marcello W. Marries Jack Aspen Harper"
          class="possibility-image">
 
-    <p class="bio-text">
-      Marcello W. — Italian, emotionally literate, impeccably dressed, and
-      fully capable of handling Harperville energy without flinching.
-      My future Daddy does NOT have to be Italian. Nor come from wealth.
-      He will, and absolutely MUST be:
-      Trauma Informed
-      Emotionally Mature
-      Patient
-      A breadth of mental health understanding and acceptance.
-      His name doesn't have to be Marcello. Somehow, my intuition tells me 
-      that will be their name, or at least their first name will start with
-      an 'M' and their last name a 'W'...
-    </p>
+    <div class="hv-happy-ending">
+      <p class="bio-text">
+        Marcello W. — Italian, emotionally literate, impeccably dressed, and
+        fully capable of handling Harperville energy without flinching.
+        My future Daddy does NOT have to be Italian. Nor come from wealth.
+        He will, and absolutely MUST be:
+        Trauma Informed
+        Emotionally Mature
+        Patient
+        A breadth of mental health understanding and acceptance.
+        His name doesn't have to be Marcello. Somehow, my intuition tells me 
+        that will be their name, or at least their first name will start with
+        an 'M' and their last name a 'W'...
+      </p>
+    </div>
   </div>
 
 </details>
 
+
 <!-- Us -->
 <details class="possibility">
-  <summary class="gold-pulse">US + LOVE = FOREVER</summary>
+  <summary class="gold-pulse">LOVE = THE END</summary>
 
   <div class="possibilities-panel">
     <img src="/assets/images/us-together.png"
          alt="Jack and Marcello"
          class="possibility-image">
 
-    <p class="bio-text">
-      A shared future built on intention, humor, mutual admiration, and the
-      quiet confidence of choosing each other on purpose. This is the loving
-      companionship I envision. We can travel, sure. But I'd be just as 
-      smitten by staying in most nights, curled up with our hands intertwined,
-      watching television or a movie. Possibilities, Possibilities, Possibilities!
-    </p>
+    <div class="hv-happy-ending">
+      <p class="bio-text">
+        A shared future built on intention, humor, mutual admiration, and the
+        quiet confidence of choosing each other on purpose. This is the loving
+        companionship I envision. We can travel, sure. But I'd be just as 
+        smitten by staying in most nights, curled up with our hands intertwined,
+        watching television or a movie. Possibilities, Possibilities, Possibilities!
+      </p>
+    </div>
   </div>
 
 </details>
+
 
 
 </section>
