updated image effect on possibilities and linked to the mainframe page

--- a/mainframe.html
+++ b/mainframe.html
@@ -45,6 +45,15 @@
                 </div>
             </a>
 
+            <a href="possibilities-jack-aspen-harper.html" class="card possibilities-card">
+  <div class="card-content">
+    <i class="fa-solid fa-stars icon-large"></i>
+    <h3>Possibilities</h3>
+    <p>Dream Board & Future Inspo</p>
+  </div>
+</a>
+
+
             <div class="card ivy-card">
     <div class="card-bg-ivy"></div>
     <div class="card-content">
