--- a/possibilities-jack-aspen-harper.html
+++ b/possibilities-jack-aspen-harper.html
@@ -78,9 +78,9 @@
 <details class="possibility">
   <summary class="gold-pulse">FUTURE ME</summary>
 
-  <div class="possibilities-panel">
+  <div class="gold-frame">
     <img src="/assets/images/future-me.png"
-         alt="Future Jack"
+         alt="Future Jack Aspen Harper in New York City at night"
          class="possibility-image">
 
     <div class="hv-happy-ending">
@@ -101,9 +101,9 @@
 <details class="possibility">
   <summary class="gold-pulse">MY FUTURE DADDY</summary>
 
-  <div class="possibilities-panel">
+  <div class="gold-frame">
     <img src="/assets/images/future-daddy.png"
-         alt="Marcello W. Marries Jack Aspen Harper"
+         alt="Marcello W. Marries Jack Aspen Harper in February 2027"
          class="possibility-image">
 
     <div class="hv-happy-ending">
@@ -118,7 +118,8 @@
         A breadth of mental health understanding and acceptance.
         His name doesn't have to be Marcello. Somehow, my intuition tells me 
         that will be their name, or at least their first name will start with
-        an 'M' and their last name a 'W'...
+        an 'M' and their last name a 'W'... even though Italian surnames don't 
+        actually start with that letter. 
       </p>
     </div>
   </div>
@@ -130,7 +131,7 @@
 <details class="possibility">
   <summary class="gold-pulse">LOVE = THE END</summary>
 
-  <div class="possibilities-panel">
+  <div class="gold-frame">
     <img src="/assets/images/us-together.png"
          alt="Jack and Marcello"
          class="possibility-image">
