fixed icon on the possibilities card in mainframe page

--- a/mainframe.html
+++ b/mainframe.html
@@ -47,11 +47,12 @@
 
             <a href="possibilities-jack-aspen-harper.html" class="card possibilities-card">
   <div class="card-content">
-    <i class="fa-solid fa-sparkles icon-large"></i>
+    <i class="fa-solid fa-compass possibilities-icon"></i>
     <h3>Possibilities</h3>
     <p>Dream Board & Future Inspo</p>
   </div>
 </a>
+
 
             <div class="card ivy-card">
     <div class="card-bg-ivy"></div>
