updated statuses, posted new blog entry. Linked with Ledger.

--- a/ledger.html
+++ b/ledger.html
@@ -28,6 +28,13 @@
         <div class="blog-grid">
 
             <article class="blog-card">
+                <div class="blog-date">Dec 26, 2025</div>
+                <h3>A New Day</h3>
+                <p class="blog-summary">I’m not out of the woods — but I’m not lost in them either.</p>
+                <a href="/blog/2025/DEC/12-26-25-a-new-day.html" class="read-more">READ ENTRY <i class="fa-solid fa-chevron-right"></i></a>
+            </article>
+
+            <article class="blog-card">
                 <div class="blog-date">Dec 25, 2025</div>
                 <h3>The Last 48 Hours</h3>
                 <p class="blog-summary">For the sake of trying, there are too many emotions being grounded in Harperville™ right now, that there are no words for a proper summation of Absofuckinglution!!!</p>
