changed css styling for ivy status

--- a/mainframe.html
+++ b/mainframe.html
@@ -61,7 +61,7 @@
         <p class="role">System Oracle</p>
         <div class="status-container">
             <span class="ivy-eye-glow-dot--ruby"></span>
-            <p class="status-blink">STATUS: Annoyed because Oopie keeps trying to hug me!</p>
+            <p class="status-blink--ruby">STATUS: Annoyed because Oopie keeps trying to hug me!</p>
         </div>
     </div>
 </div>
